whitespace fix && input padding

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,6 +117,7 @@ ul{
   padding: 0 0.5rem;
   height: 2.5rem;
   font-size: 1.2rem;
+  padding-left: 1rem;
 }
 
 #search-bar2 {
